--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: huilai-backend
+  profiles:
+    active: dev
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -10,10 +12,22 @@ spring:
   # session 失效时间
   session:
     timeout: 86400
+    store-type: redis
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+  redis:
+    port: 6379
+    host: localhost
+    database: 0
+    password: 123456
 server:
   port: 8080
   servlet:
     context-path: /api
+    session:
+      cookie:
+        domain: localhost
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
